@@ -54,8 +54,8 @@
 
             <div class='mensaje-oops' style="display:none">
               <p>
-                Ooops, la camara no esta funcionando.<br/>
-                Es necesario que este prendida para que huayra-motion pueda funcionar.
+                <strong style="font-size:1.666em">Ooops</strong><br/>
+                <strong class="msg"></strong>
               </p>
 
               <img src="images/carita.png" alt="Ooops (carita mareada)" />
