@@ -10,6 +10,9 @@ huayra-stopmotion (0.46) UNRELEASED; urgency=medium
   * Soporta multiples camaras en red.
   * Si no tenemos camara o la camara no funciona, nos notifica al 
     iniciar la aplicacion.
+  * Si no podemos capturar imagenes, tambien nos notifica.
+  * Agrande un poquito la resolucion de la aplicacion porque no se
+    lograban ver algunos botones.
 
  -- Mauro <mauro@sdf.org>  Fri, 12 Dec 2014 16:44:49 -0300
 
